--- a/Modules/Gadgeteer/DisplayN18/DisplayN18.html
+++ b/Modules/Gadgeteer/DisplayN18/DisplayN18.html
@@ -9,7 +9,7 @@
 <p>Version: <strong>0.7.0</strong></p>
 <h2 id="connections">Connections</h2>
 <p>N18Display is connected as followed on <a href="http://docs.ghielectronics.com/hardware/legacy_products/gadgeteer/fez_cerberus.html">Cerberus</a>:</p>
-<p><img src="Gadgeteer-N18Display-Cerberus.png" alt="Schematic" /></p>
+<p><img src="Gadgeteer-N18Display-Cerberus.jpg" alt="Schematic" /></p>
 <table>
 <thead>
 <tr>
