--- a/Modules/Grove/UltrasonicRanger/UltrasonicRanger.html
+++ b/Modules/Grove/UltrasonicRanger/UltrasonicRanger.html
@@ -9,7 +9,7 @@
 <p>Version: <strong>0.7.0</strong></p>
 <h2 id="connections">Connections</h2>
 <p>UltrasonicRanger is connected as followed on <a href="http://www.ingenuitymicro.com/products/electron/">Electron</a>:</p>
-<p><img src="UltrasonicRanger-Electron.png" alt="Schematic" /></p>
+<p><img src="UltrasonicRanger-Electron.jpg" alt="Schematic" /></p>
 <table>
 <thead>
 <tr>
