--- a/Modules/Others/HCSR04/HC-SR04.html
+++ b/Modules/Others/HCSR04/HC-SR04.html
@@ -9,7 +9,7 @@
 <p>Version: <strong>0.7.0</strong></p>
 <h2 id="connections">Connections</h2>
 <p>HC-SR04 is connected as followed on <a href="http://www.ingenuitymicro.com/products/electron/">Electron</a>:</p>
-<p><img src="HC-SR04-Electron.png" alt="Schematic" /></p>
+<p><img src="HC-SR04-Electron.jpg" alt="Schematic" /></p>
 <table>
 <thead>
 <tr>
